[gd_scene load_steps=5 format=3 uid="uid://fcyxv6c1fgqs"]

[ext_resource type="Texture2D" uid="uid://b2dw05cpwbnvt" path="res://Assets/Sprites/space.png" id="1_5ml65"]
[ext_resource type="Script" path="res://Scripts/Background.gd" id="1_dsbtt"]
[ext_resource type="Texture2D" uid="uid://bgbmts7byhm1y" path="res://Assets/Sprites/far_stars.png" id="2_4f0dx"]
[ext_resource type="Texture2D" uid="uid://cko25i13l0mqy" path="res://Assets/Sprites/close_stars.png" id="3_jwgfj"]

[node name="Background" type="ParallaxBackground"]
script = ExtResource("1_dsbtt")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true

[node name="TextureRect" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("1_5ml65")
stretch_mode = 1

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true

[node name="TextureRect" type="TextureRect" parent="FarStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_4f0dx")
stretch_mode = 1

[node name="CloseStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="TextureRect" type="TextureRect" parent="CloseStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_jwgfj")
stretch_mode = 1
